Adjust slider `left` property in HistoryListComponent styles for alignment correction.

--- a/src/app/pages/history/history-list/history-list.component.scss
+++ b/src/app/pages/history/history-list/history-list.component.scss
@@ -47,7 +47,7 @@
 .slider {
   position: absolute;
   top: 0;
-  left: 1px;
+  left: 2px;
   height: 100%;
   border-radius: clamp(6px, 2vw, 8px);
   background: $glass-spiner;
